--- a/bitmall-master/.settings/org.eclipse.core.resources.prefs
+++ b/bitmall-master/.settings/org.eclipse.core.resources.prefs
@@ -21,6 +21,7 @@ encoding//webapp/WEB-INF/views/cart.jsp=UTF-8
 encoding//webapp/WEB-INF/views/company.jsp=utf-8
 encoding//webapp/WEB-INF/views/faq.jsp=utf-8
 encoding//webapp/WEB-INF/views/faq_read.jsp=utf-8
+encoding//webapp/WEB-INF/views/include/navigation.jsp=UTF-8
 encoding//webapp/WEB-INF/views/jumun.jsp=utf-8
 encoding//webapp/WEB-INF/views/jumun_info.jsp=utf-8
 encoding//webapp/WEB-INF/views/main/index.jsp=UTF-8
